--- a/src/content/posts/interesting/延迟和吞吐.mdx
+++ b/src/content/posts/interesting/延迟和吞吐.mdx
@@ -119,7 +119,7 @@ $$
 那么这个图具体长什么样呢？我们可以通过Walfram查看
 
 <div style="text-align: center">
-<img src="/pic/interesting/latency-cpu/relation.png"/>
+<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/relation.png"/>
 </div>
 
 从这幅图中我们可以发现随着CPU利用率的提升，延迟会快速的增长，我们可以通过下面的数据更具体的感受这一关系
@@ -155,13 +155,13 @@ $$
 根据以上的假设，我们可以用以下的图片来表明该模型，横轴表明时间，纵轴表明待处理的工作量。
 
 <div style="text-align: center">
-<img src="/pic/interesting/latency-cpu/request.png"/>
+<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/request.png"/>
 </div>
 
 我们可以用下面的图来表明更一般的情况，即有可能一个请求还没处理完，下一个请求就来了。
 
 <div style="text-align: center">
-<img src="/pic/interesting/latency-cpu/normal-request.png"/>
+<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/normal-request.png"/>
 </div>
 
 现在我们可以尝试计算这个图形的面积，我们有两种方式计算这个图像的面积
@@ -211,7 +211,7 @@ $$
 如果我们固定S(每个请求的处理时间), 我们可以获得以下W与 $\lambda$ 的函数图像，即延迟和吞吐量的关系。
 
 <div style="text-align: center">
-<img src="/pic/interesting/latency-cpu/relation2.png"/>
+<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/relation2.png"/>
 </div>
 
 从该公式我们可以得到以下结论
