--- a/src/content/posts/paper/mapreduce.mdx
+++ b/src/content/posts/paper/mapreduce.mdx
@@ -48,7 +48,7 @@ func reduce(Key key, List<Value> values) {
 根据论文中的描述,MapReduce只是一个计算模型，你可以按照你自己的需要，设计并实现最适合你需求的架构.在这里我们介绍谷歌所使用的架构.
 
 <div style="text-align: center">
-<img src="/pic/paper/MapReduce.png"/>
+<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/MapReduce.png"/>
 </div>
 
 #### 角色描述
