add new bp post

--- a/src/content/posts/vector-search/bq.mdx
+++ b/src/content/posts/vector-search/bq.mdx
@@ -17,41 +17,29 @@ description: 'Binary quantization 是一种向量压缩技术, 在Weaviate中该
 [原文链接](https://weaviate.io/blog/binary-quantization)
 ##  什么是 binary quantization?
 
-目前的向量数据库会构建大规模的向量索引，并将向量索引放在内存中进行搜索。这样可以做到实时的查询，但是相应的成本也变高了。`Binary quantization(BQ)` 是一种向量压缩算法，可以让你在内存占用以及查询的准确性之间作出权衡。
+目前的向量数据库会构建大规模的向量索引，并将向量索引放在内存中进行搜索。这样可以实现实时查询，但相应的成本也相应增加。Binary quantization(BQ) 是一种向量压缩算法，可以在内存占用和查询准确性之间做出权衡。
 
-我们可以先通过类比的方式来了解这一技术。假设每个要存储的向量都是一个家庭地址。这个家庭地址可以让您准确地找到某人居住的位置，包括国家、州、城市、街道号甚至门牌号。而为了可以精准定位，我们所付出的代价就是每个地址占用很多内存 (地址越详细，内存占用越多) 来存储、搜索和读取。同样地，在多维空间中定位一个向量，你可以将向量中每个维度上的数字看作沿着该维度指定的方向需要移动的距离。
+我们可以通过类比的方式来了解这一技术。假设每个要存储的向量都像是一个家庭地址。这个地址可以精确地定位某人的居住位置，包括国家、州、城市、街道号甚至门牌号。但为了获得这种精确性，需要占用大量内存来存储、搜索和读取每个地址（详细的地址占用的内存更多）。同样地，在多维空间中定位一个向量，可以将向量中每个维度的数字视为沿该维度指定的方向移动的距离。
 
-`Binary quantization(BQ)` 的压缩过程则是将向量中的每一维数字根据它的`符号`将其转化为0(负数)，1(正数)。这听上去似乎有点离谱，在完全丢失了每一维上的具体数字，你怎么可以精确定位该向量呢？ 尽管BQ听起来似乎不太靠谱，但它确实在高维度矢量上可以取得不错的效果。下面让我们看看原因！
+Binary quantization(BQ) 的压缩过程是根据每个数字的符号将向量中的每一维转换为0（负数）或1（正数）。这听起来似乎有些不可思议，因为丢失了每个维度上的具体数字，那么如何精确定位该向量呢？尽管BQ听起来似乎不太可靠，但在高维度矢量上却能取得不错的效果。接下来让我们来看看原因！
 
 <div style="text-align: center">
 <img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/bq_vecs1.png"/>
 </div>
-
-二值化并不仅应用于向量的压缩，我们还可以从其他领域理解它的用途 - 例如在计算机视觉中。如果你对一幅图像进行二值化，即对每个像素，如果该像素大于某个阈值，则将其替换为1；否则，将其替换为0。这样生成的图像是黑白二进制图像。这样做确实会丢失图像细节，但显著压缩了图像大小。
+二值化不仅适用于向量的压缩，我们还可以从其他领域理解其用途，比如在计算机视觉中。如果对一幅图像进行二值化，即对每个像素，如果大于某个阈值，则替换为1；否则，替换为0。这样生成的图像是黑白二进制图像。虽然会丢失图像细节，但显著地压缩了图像大小。
 
 <div style="display: flex; justify-content: space-between;">
     <img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/bp_vecs2.png" alt="原始图片" style="max-width: 45%;"/>
     <img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/bp_vecs3.png" alt="二值化后的图片" style="max-width: 45%;"/>
 </div>
 
-现在，让我们考虑如果把一个句子向量embedding 二值化后是什么样子。在下面的图中，我们将句子：“All your vector embeddings belong to you!”转化为一个384维的向量。第一张图片展示了向量的所有384个数字，每个数字都是一个32位的浮点数，在热力图上用颜色渐变的方式显示。每个向量维度上的数字决定了热力图上颜色渐变的程度。下面的图片展示了相同的向量，但我们对向量进行了阈值处理，使得所有正值维度转换为1（白色），而负值维度转换为0（黑色）。因此，我们得到了一个黑白相间的热力图，看起来有点像条形码。这就是对向量进行`Binary quantization(BQ)`的效果！得到的向量大小要小得多，但也丢失了很多细节。
+现在，让我们考虑一下将一个句子向量embedding进行二值化后会呈现怎样的形式。在下面的图示中，我们将句子：“All your vector embeddings belong to you!”转化为一个384维的向量。第一张图展示了向量的所有384个数字，每个数字都是一个32位的浮点数，在热力图上用颜色渐变的方式显示。每个向量维度上的数字决定了热力图上颜色渐变的程度。下面的图展示了相同的向量，但我们对向量进行了阈值处理，使得所有正值维度转换为1（白色），而负值维度转换为0（黑色）。因此，我们得到了一个黑白相间的热力图，看起来有点像条形码。这就是对向量进行Binary quantization(BQ)的效果！得到的向量大小要小得多，但也丢失了很多细节。
 
-<div style="text-align: center">
-<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/bp-vecs4.jpeg"/>
-</div>
+Binary quantization(BQ)通过仅保留向量的方向来简化向量的编码。每个向量维度都用一个比特位编码，表示它是正还是负。例如，像 [12, 1, -100, 0.003, -0.001, 128, -1000, 0.0001] 这样的向量将被压缩为单个字节，结果是二进制序列[1,1,0,1,0,1,0,1]。通过将每个维度存储的数字从float32转换为1-bit，将每个向量占用的空间减少了32倍。然而，我们无法从BQ后的向量还原出原始向量——这使得这成为一种有损压缩技术。
 
-<div style="text-align: center">
-<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/bp-vecs5.png"/>
-</div>
-
-
-
-`Binary quantization(BQ)`通过仅保留向量的方向来简化向量的编码。每个向量维度都用一个比特位编码，表示它是正还是负。例如，像 `[12, 1, -100, 0.003, -0.001, 128, -1000, 0.0001]` 这样的向量将被压缩为单个字节，结果是二进制序列`[1,1,0,1,0,1,0,1]`。通过将每个维度存储的数字从`float32`转换为`1-bit`，将每个向量占用的空间减少了32倍。然而，我们无法从BQ后的向量还原出原始向量——这使得这成为一种有损压缩技术。
-
-##  使用二值化向量的细节
-
+## 使用二值化向量的细节
 ### 二值化向量的距离计算
-我们首先考虑如何计算两个二值化向量之间的距离。计算方法很简单：因为我们仅关注它们的方向性，我们只需要评估它们每个维度的`bit`是否一致。即计算两个向量不同比特位的数量。在这里，因为可以利用位操作，会比计算非二值化向量之间的距离要快得多。
+首先，我们考虑如何计算两个二值化向量之间的距离。计算方法很简单：因为我们仅关注它们的方向性，我们只需要评估它们每个维度的bit是否一致。即计算两个向量不同比特位的数量。在这里，因为可以利用位操作，会比计算非二值化向量之间的距离要快得多。
 
 例如，将向量`[12, 1, -100, 0.03, -0.01, 128, -100, 0.01]`压缩为`11010101`，以及将第二个向量`[11, 4, -99, -0.01, 0.02, 130, -150, 0.02]`压缩为`11001101`，它们之间的距离由不同比特位的数量决定 (距离为2)。这实际上也就是两个向量之间的汉明距离。
 
