--- a/src/content/posts/database/duckdb-file-en.mdx
+++ b/src/content/posts/database/duckdb-file-en.mdx
@@ -71,7 +71,7 @@ Now let's move on to DataBaseHeader:
 Now, let's take a look at how the actual data is stored. It consists of a `schema count` and `${schema_count}` individual `schemas`. In DuckDB, think of a schema as a database.
 
 <div style="text-align: center">
-<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/20241026165754.png"</div>
+<img src="https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/20241026165754.png"/>
 </div>
 
 Let's take a closer look at how schemas are stored in DuckDB databases. The first piece of information is the schema's name, followed by a count of each type it contains. Now let's briefly go over these different types together! For more detailed definitions, feel free to visit their official website.
